I fixed bug for small screen on firefox -> #display element does not overflow borders

--- a/CSS/primary.css
+++ b/CSS/primary.css
@@ -150,6 +150,10 @@ main {
     #output::-webkit-scrollbar {
         height: 5px;
     }
+
+    #display {
+        max-width: 100%;
+    }
 }
 
 
